...
<string name="app_name">TeamCityApp</string>
<string name="text_progress_bar_loading">Authenticating…</string>
<string name="text_app_description">TeamCity in your pocket</string>
<string name="text_try_it_out">Haven\'t set up your server yet or having issues signing in? Still want to give it a try?</string>
<string name="text_button_try_it_out">Tap here</string>
<string name="text_login_button">Login</string>
<string name="info_unauthorized_dialog_title">Oh Snap!</string>
<string name="info_try_it_out_title">Hey there</string>
<string name="info_unauthorized_dialog_content">It seems that your TC server doesn\'t have Guest User enabled. In order to use the app make sure it is enabled. For more details see <a href="https://confluence.jetbrains.com/display/TCD10/Enabling+Guest+Login">TC help</a>.</string>
<string name="info_try_it_out_dialog_content">Want to try the app out?\nWe can sign you in as a guest to official &lt;a href="%s">Jetbrains TeamCity server&lt;/a>.</string>
<string name="dialog_try_it_out_title">Try it out</string>
</resources>

