...
    <!--Testing-->
    <string name="navigate_up">Navigate up</string>

    <!--Build log-->

    <!--Login activity-->
    <string name="text_try_it_out_button">Try it out</string>

    <!--Run build activity-->
    <string name="title_run_build">Run build</string>
    <string name="text_restarting_build">Restarting build..</string>
    <string name="text_opening_build">Opening build..</string>
    <string name="text_build_is_run">Build is added to build queue</string>
...
